--- a/index.html
+++ b/index.html
@@ -4,52 +4,109 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teléfonos</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <div class="title">
         <h1 class="tit">Título</h1>
       </div>
+      <nav>
+        <!-- 1 -->
+        <div class="nv">
+          <select class="bt" id="loby">
+            <option selected value="inicio">
+              <h3 class="op">Inicio</h3>
+            </option>
+            <option value="galeria">
+              <h3 class="op">Galeria</h3>
+            </option>
+          </select>
+        </div>
+        <!-- 2 -->
+        <div class="nv">
+          <select class="bt" id="xiaomi">
+            <option selected>
+              <h3 class="op">Xiaomi</h3>
+            </option>
+            <option value="consulta1">
+              <h3 class="op">Consulta</h3>
+            </option>
+            <option value="altas1">
+              <h3 class="op">Altas</h3>
+            </option>
+            <option value="bajas1">
+              <h3 class="op">Bajas</h3>
+            </option>
+            <option value="editar1">
+              <h3 class="op">Editar</h3>
+            </option>
+          </select>
+        </div>
+        <!-- 3 -->
+        <div class="nv">
+          <select class="bt">
+            <option selected>
+              <h3 class="op">iPhone</h3>
+            </option>
+            <option value="consulta2">
+              <h3 class="op">Consulta</h3>
+            </option>
+            <option value="altas2">
+              <h3 class="op">Altas</h3>
+            </option>
+            <option value="bajas2">
+              <h3 class="op">Bajas</h3>
+            </option>
+            <option value="editar2">
+              <h3 class="op">Editar</h3>
+            </option>
+          </select>
+        </div>
+        <!-- 4 -->
+        <div class="nv">
+          <select class="bt">
+            <option selected>
+              <h3 class="op">Samsung</h3>
+            </option>
+            <option value="consulta3">
+              <h3 class="op">Consulta</h3>
+            </option>
+            <option value="altas3">
+              <h3 class="op">Altas</h3>
+            </option>
+            <option value="bajas3">
+              <h3 class="op">Bajas</h3>
+            </option>
+            <option value="editar3">
+              <h3 class="op">Editar</h3>
+            </option>
+          </select>
+        </div>
+        <!-- 5 -->
+        <div class="nv">
+          <select class="bt">
+            <option selected>
+              <h3 class="op">POCO</h3>
+            </option>
+            <option value="consulta4">
+              <h3 class="op">Consulta</h3>
+            </option>
+            <option value="altas4">
+              <h3 class="op">Altas</h3>
+            </option>
+            <option value="baja4">
+              <h3 class="op">Bajas</h3>
+            </option>
+            <option value="editar4">
+              <h3 class="op">Editar</h3>
+            </option>
+          </select>
+        </div>
+      </nav>
     </header>
-    <nav>
-      <div class="nv">
-        <select class="bt">
-          <i class="fi fi-bs-home"></i>
-          <option value="Inicio">
-            <h3 class="op">Inicio</h3>
-          </option>
-          <option value="Galeria">
-            <h3 class="op">Galeria</h3>
-          </option>
-        </select>
-      </div>
-      <div class="nv">
-        <button class="bt">
-          <i class="fi fi-rs-smartphone"></i>
-          <h3 class="op">Xiaomi</h3>
-        </button>
-      </div>
-      <div class="nv">
-        <button class="bt">
-          <i class="fi fi-rs-smartphone"></i>
-          <h3 class="op">Samsung</h3>
-        </button>
-      </div>
-      <div class="nv">
-        <button class="bt">
-          <i class="fi fi-tr-smartphone"></i>
-          <h3 class="op">iPhone</h3>
-        </button>
-      </div>
-      <div class="nv">
-        <button class="bt">
-          <i class="fi fi-rs-smartphone"></i>
-          <h3 class="op">Huawei</h3>
-        </button>
-      </div>
-    </nav>
     <main></main>
     <footer></footer>
   </body>
+  <script src="./js/script.js"></script>
 </html>
