--- a/index.html
+++ b/index.html
@@ -103,10 +103,15 @@
             </option>
           </select>
         </div>
+        <div style="width: 3%; height: 100%; float: left">
+          <button class="cerrar" id="cerrar">
+            <i class="fi fi-br-cross" style="color: white"></i>
+          </button>
+        </div>
       </nav>
     </header>
     <main>
-      <div class="content hidden" id="content">
+      <div class="content" id="content">
         <h2 style="padding-top: 1%; padding-bottom: 2%">Celulares</h2>
         <p class="text">
           Los celulares son dispositivos portátiles que permiten realizar
@@ -127,7 +132,7 @@
         </p>
         <img src="./img/img1.gif" alt="m" class="imgC" />
       </div>
-      <div class="galeria" id="galeria">
+      <div class="galeria hidden" id="galeria">
         <h2 style="padding-bottom: 2%">Galeria</h2>
         <section class="gal">
           <img src="./img/galeria/1.jpg" alt="m" />
