--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header>
       <div class="title">
-        <h1 class="tit">Celulares</h1>
+        <center>
+          <h1 class="tit">Celulares</h1>
+        </center>
       </div>
       <nav>
         <!-- 1 -->
@@ -131,19 +133,21 @@
           incluyen Apple (iPhones con iOS) y Samsung (serie Galaxy con Android).
         </p>
         <img src="./img/img1.gif" alt="m" class="imgC" />
+        <br /><br /><br /><br /><br />
+        <br /><br /><br /><br /><br />
       </div>
       <div class="galeria hidden" id="galeria">
         <h2 style="padding-bottom: 2%">Galeria</h2>
         <section class="gal">
-          <img src="./img/galeria/1.jpg" alt="m" />
-          <img src="./img/galeria/2.jpg" alt="m" />
-          <img src="./img/galeria/3.jpg" alt="m" />
-          <img src="./img/galeria/4.jpg" alt="m" />
-          <img src="./img/galeria/5.jpg" alt="m" />
-          <img src="./img/galeria/6.jpg" alt="m" />
-          <img src="./img/galeria/7.jpg" alt="m" />
+          <img src="./img/galeria/app14.2.jpg" alt="m" />
+          <img src="./img/galeria/app14.jpg" alt="m" />
+          <img src="./img/galeria/gala3.jpg" alt="m" />
+          <img src="./img/galeria/gala4.2.jpg" alt="m" />
+          <img src="./img/galeria/xia3.1.jpeg" alt="m" />
+          <img src="./img/galeria/xia3.jpeg" alt="m" />
         </section>
       </div>
+      <br /><br /><br /><br /><br />
     </main>
     <footer>
       <div class="content-footer">
